--- a/authentic-thai-massage.html
+++ b/authentic-thai-massage.html
@@ -69,7 +69,7 @@
                         <span class="icon-bar"></span>
                     </button>
 
-                    <a class="navbar-brand page-scroll font-family-alt letter-spacing-1 text-extra-large text-uppercase" href="#page-top">
+                    <a class="navbar-brand page-scroll font-family-alt letter-spacing-1 text-extra-large text-uppercase" href="http://mayshomespa.com/">
                         <img class="logo-navbar-dark img-fluid" src="assets/images/logo/logo-may-spa.png" alt="logo" style='height: 60px'>
                         <img class="logo-navbar-white img-fluid" src="assets/images/logo/logo-may-spa.png" alt="logo" style='height: 60px'>
                     </a>
