--- a/sitemap.html
+++ b/sitemap.html
@@ -114,16 +114,18 @@
 	<div id="top">
 		<nav>mayshomespa.com HTML Site Map</nav>
 		<h3>
-<span>Last updated: 2020, January 24<br />
-Total pages: 1</span>
-<a href="http://mayshomespa.com">mayshomespa.com Homepage</a>
+<span>Last updated: 2020, January 28<br />
+Total pages: 3</span>
+<a href="https://mayshomespa.com">mayshomespa.com Homepage</a>
 </h3></div>
 	<div id="cont">
 		<ul class="level-0">
 
-            <li class="lhead">/  <span class="lcount">1 pages</span></li>
+            <li class="lhead">/  <span class="lcount">3 pages</span></li>
             
-<li class="lpage last-page"><a href="http://mayshomespa.com/" title="Sensational home spa - By may">Sensational home spa - By may</a></li>
+<li class="lpage"><a href="https://mayshomespa.com/" title="Best Home Body Spa In Pattaya | Best Outcall Massage In Pattaya">Best Home Body Spa In Pattaya | Best Outcall Massage In Pattaya</a></li>
+<li class="lpage"><a href="https://mayshomespa.com/services.html" title="Sensational home spa - By may">Sensational home spa - By may</a></li>
+<li class="lpage last-page"><a href="https://mayshomespa.com/index.html" title="Best Home Body Spa In Pattaya | Best Outcall Massage In Pattaya">Best Home Body Spa In Pattaya | Best Outcall Massage In Pattaya</a></li>
 </ul>
 		<!--
 Please note:
