--- a/authentic-thai-massage.html
+++ b/authentic-thai-massage.html
@@ -95,7 +95,7 @@
         <div class="container-fluid">
             <div class="row no-padding-rl no-padding-top padding-8">
                 <div class="col-md-6 col-md-offset-3 text-center">
-                    <h1 class="font-family-alt font-weight-700 letter-spacing-2 text-uppercase xs-title-small title-medium title-underline-thick-base-color">Best and Authentic Thai Massage</h1>
+                    <h1 class="font-family-alt font-weight-700 letter-spacing-2 text-uppercase xs-title-small title-medium title-underline-thick-base-color" align="left">Best and Authentic Thai Massage</h1>
                     <p class="text-extra-large xs-text-large text-gray-dark-2 no-margin-rl no-margin-bottom margin-4"><strong>
 					Get the Best and Authentic Thai Massage</strong></p>
                     <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">No other way can be convenient and better to rejuvenate your mind and body and make you feel fresh with satisfaction that can be seen on your face than getting the best and authentic Thai massage – globally famous for its way of relieving pain and keeping your body nourished well.</p>
