improvement in codes done

--- a/body-massage-pattaya.html
+++ b/body-massage-pattaya.html
@@ -70,14 +70,14 @@
                     </button>
 
                     <a class="navbar-brand page-scroll font-family-alt letter-spacing-1 text-extra-large text-uppercase" href="http://mayshomespa.com/">
-                        <img class="logo-navbar-dark img-fluid" src="assets/images/logo/logo-may-spa.png" alt="logo" style='height: 60px'>
+                        <img class="logo-navbar-dark img-fluid" src="assets/images/logo/logo-may-spa.png" alt="logo" style='height: 55px'>
                         <img class="logo-navbar-white img-fluid" src="assets/images/logo/logo-may-spa.png" alt="logo" style='height: 60px'>
                     </a>
                 </div>
                 <!-- //.navbar-header -->
                 
                 <div id="navbar-niobe" class="navbar-collapse collapse col-md-9 pull-right">
-                    <ul class="nav navbar-nav font-family-alt letter-spacing-1 text-small text-uppercase">
+                    <ul class="nav navbar-nav font-family-alt letter-spacing-1 text-large text-uppercase">
                         <li><a href="index.html" class="page-scroll">Home</a></li>
                         <li><a href="services.html" class="page-scroll">Services</a></li>
                     </ul>
