--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 <head>
     <meta charset="utf-8">
-    <title>Best Home Body Spa In Pattaya | Best Outcall Massage In Pattaya</title>
-    <meta name="description" content="Sensational Home Spa - By May | Best Body Spa In Pattaya, Best Home Spa In Pattaya, Best Outcall Massage In Pattaya, Best Outcall Spa In Pattaya">
-    <meta name="keywords" content="best body spa in pattaya, best home spa in pattaya, best outcall massage in pattaya, best outcall spa in pattaya">
+    <title>Best Body Spa in Pattaya | Best Outcall Massage in Pattaya City</title>
+    <meta name="description" content="Sensational Home Spa - By May offers best Best Home spa in Pattaya. Call us at +66 842705334 and book our therapists and get best best outcall body spa in Pattaya.">
+    <meta name="keywords" content="Best body spa in pattaya, Home spa in pattaya, outcall massage in pattaya, outcall spa in pattaya">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="google-site-verification" content="UAIVbs_A7-Gco3_QcSjcGoAT41xsmP72h7IbF_EyCd0" />
