--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
 
                 <div class='row' style='padding: 15px;'>
                     <div class='col-md-3 col-sm-12'>
-                        <img src="./assets/images/thai-massage.jpg" class="img-thumbnail" alt="Responsive image">
+                        <img src="./assets/images/thai-massage.jpg" class="img-thumbnail" alt="Best body spa in pattaya">
                     </div>
                     <div class='col-md-9 col-sm-12'>
                         <h3 class='font-weight-700 margin-2 textc'>Traditional Thai Spa</h3>
