--- a/body-massage-pattaya.html
+++ b/body-massage-pattaya.html
@@ -5,9 +5,9 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 <head>
     <meta charset="utf-8">
-    <title>Best Full Body Massage in Pattaya, Home & Erotic Massage in Pattaya</title>
-    <meta name="description" content="Best body massage in pattaya, Best Full body massage in pattaya, Best Home massage in pattaya, Best massage in pattaya, Best erotic massage pattaya">
-    <meta name="keywords" content="MAY’S HOME SPA">
+    <title>Best Full body massage in Pattaya | Best Home massage in Pattaya</title>
+    <meta name="description" content="Book the best home massage experience in Pattaya of your own surroundings. Sensational Home Spa is a home massage service offering an erotic and private massage.">
+    <meta name="keywords" content="Best body massage in pattaya, Full body massage in pattaya, Home massage, erotic massage pattaya">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
