--- a/authentic-thai-massage.html
+++ b/authentic-thai-massage.html
@@ -6,8 +6,8 @@
 <head>
     <meta charset="utf-8">
     <title>Best and Authentic Thai Massage | Sensational home spa - By may</title>
-    <meta name="description" content="MAY’S HOME SPA">
-    <meta name="keywords" content="MAY’S HOME SPA">
+    <meta name="description" content="Sensational Home Spa is the best Thai Massage spa specializing in best authentic Thai massage. Call us +66 842705334 and book our therapists now.">
+    <meta name="keywords" content="authentic thai massage, best thai massage">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
