added menu items

--- a/body-massage-pattaya.html
+++ b/body-massage-pattaya.html
@@ -80,6 +80,8 @@
                     <ul class="nav navbar-nav font-family-alt letter-spacing-1 text-large text-uppercase">
                         <li><a href="index.html" class="page-scroll">Home</a></li>
                         <li><a href="services.html" class="page-scroll">Services</a></li>
+                        <li><a href="authentic-thai-massage.html" class="page-scroll">Thai Massage</a></li>
+                        <li><a href="body-massage-pattaya.html" class="page-scroll">Body Massage</a></li>
                     </ul>
                 </div>
                 <!-- //.navbar-collapse -->
