--- a/authentic-thai-massage.html
+++ b/authentic-thai-massage.html
@@ -83,6 +83,8 @@ ul {
                     <ul class="nav navbar-nav font-family-alt letter-spacing-1 text-medium text-uppercase" >
                         <li><a href="index.html" class="page-scroll">Home</a></li>
                         <li><a href="services.html" class="page-scroll">Services</a></li>
+                        <li><a href="authentic-thai-massage.html" class="page-scroll">Thai Massage</a></li>
+                        <li><a href="body-massage-pattaya.html" class="page-scroll">Body Massage</a></li>
                     </ul>
                 </div>
                 <!-- //.navbar-collapse -->
