--- a/services.html
+++ b/services.html
@@ -77,7 +77,7 @@
                 <!-- //.navbar-header -->
                 
                 <div id="navbar-niobe" class="navbar-collapse collapse col-md-9 pull-right">
-                    <ul class="nav navbar-nav font-family-alt letter-spacing-1 text-small text-uppercase">
+                    <ul class="nav navbar-nav font-family-alt letter-spacing-1 text-large text-uppercase">
                         <li><a href="index.html" class="page-scroll">Home</a></li>
                         <li><a href="services.html" class="page-scroll">Services</a></li>
                         <li><a href="authentic-thai-massage.html" class="page-scroll">Thai Massage</a></li>
