--- a/authentic-thai-massage.html
+++ b/authentic-thai-massage.html
@@ -104,7 +104,7 @@ ul {
                     <p class="text-extra-large xs-text-large text-gray-dark-2 no-margin-rl no-margin-bottom margin-4"><strong>
 					Get the Best and Authentic Thai Massage</strong></p>
                     <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">No other way can be convenient and better to rejuvenate your mind and body and make you feel fresh with satisfaction that can be seen on your face than getting the best and authentic Thai massage – globally famous for its way of relieving pain and keeping your body nourished well.</p>
-                    <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">When soft hands of beautiful girls move on your body, it will surely increase the blood flow and fill your mind and body with new feelings, eroticism, happiness and feelings of new energy level. The amazing thing is that you will get the <strong>best and authentic Thai massage</strong> at your home or hotel room – full secure and in the most pleasurable way with privacy.</p>
+                    <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">When soft hands of beautiful girls move on your body, it will surely increase the blood flow and fill your mind and body with new feelings, happiness and feelings of new energy level. The amazing thing is that you will get the <strong>best and authentic Thai massage</strong> at your home or hotel room – full secure and in the most pleasurable way with privacy.</p>
                     <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">Choice is yours; you can choose the massage of your choice at May’s Home Spa offered at your home or hotel room in safe and secure way with pleasure – beyond your expectations.
       We offer you a variety of massages for 60 Minutes, 120 minutes and 180 minutes. Choose the session of your choice. Some of the best and authentic Thai massage that are offered as alone or in combination include:</p>
       <ul class='margin-2 xs-text-large text-extra-large text-gray-dark-2 '>
@@ -114,7 +114,7 @@ ul {
         <li>Deep Tissue Therapy with Aroma </li>
         <li>Couple Massage (four hands)</li>
     </ul>
-                    <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">In addition, we also offer you a perfect blend of Thai and Balinese therapy – both dry and oil. Choose the right one of your choice or call us to schedule an appointment at your home or hotel for the best erotic massage offered anywhere in Pattaya for an unforgettable pleasure that you wish to get for better refreshment.</p>
+                    <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">In addition, we also offer you a perfect blend of Thai and Balinese therapy – both dry and oil. Choose the right one of your choice or call us to schedule an appointment at your home or hotel for the best massage offered anywhere in Pattaya for an unforgettable pleasure that you wish to get for better refreshment.</p>
                     <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">Feel free to contact us for the <strong>best and authentic Thai massage</strong> anywhere in Pattaya right to your home and hotel room. </p>
                 </div>
                 <!-- //.col-md-6 -->
