added pages and links

--- a/services.html
+++ b/services.html
@@ -77,11 +77,13 @@
                 <!-- //.navbar-header -->
                 
                 <div id="navbar-niobe" class="navbar-collapse collapse col-md-9 pull-right">
-                    <ul class="nav navbar-nav font-family-alt letter-spacing-1 text-large text-uppercase">
+                    <ul class="nav navbar-nav font-family-alt letter-spacing-1 text-small text-uppercase">
                         <li><a href="index.html" class="page-scroll">Home</a></li>
+                        <li><a href="what-we-offer.html" class="page-scroll">What we offer</a></li>
+                        <li><a href="why-choose-us.html" class="page-scroll">Why choose us</a></li>
                         <li><a href="services.html" class="page-scroll">Services</a></li>
-                        <li><a href="authentic-thai-massage.html" class="page-scroll">Thai Massage</a></li>
-                        <li><a href="body-massage-pattaya.html" class="page-scroll">Body Massage</a></li>
+                        <li><a href="gallery.html" class="page-scroll">Gallery</a></li>
+                        <li><a href="outcall-hotel-massage.html" class="page-scroll">Outcall hotel massage</a></li>
                     </ul>
                 </div>
                 <!-- //.navbar-collapse -->
@@ -97,7 +99,7 @@
         <div class="container-fluid">
             <div class="row no-padding-rl no-padding-top padding-8">
                 <div class="col-md-6 col-md-offset-3 text-center">
-                    <h3 class="font-family-alt font-weight-700 letter-spacing-2 text-uppercase xs-title-small title-medium title-underline-thick-base-color">Services</h3>
+                    <h3 class="font-family-alt font-weight-700 letter-spacing-2 text-uppercase xs-title-small title-medium title-underline-thick-base-color" style='margin-top: 50px;'>Services</h3>
                     <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large"><i>Our Spa accommodates all of your relaxation needs. Our aim is to give you 5 star spa facilities at your home.
                     </i></p>
                 </div>
