improvement in codes

--- a/about-body-massage.html
+++ b/about-body-massage.html
@@ -12,6 +12,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <!-- Loading Bootstrap CSS -->
+    <link rel="shortcut icon" href="assets/images/logo/favicon.ico" type="image/x-icon">
+
     <link href="assets\css\bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Great+Vibes&display=swap&subset=latin-ext" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Gelasio&display=swap" rel="stylesheet">
@@ -79,11 +81,12 @@
                 <div id="navbar-niobe" class="navbar-collapse collapse col-md-9 pull-right">
                     <ul class="nav navbar-nav font-family-alt letter-spacing-1 text-small text-uppercase">
                         <li><a href="index.html" class="page-scroll">Home</a></li>
-                        <li><a href="what-we-offer.html" class="page-scroll">What we offer</a></li>
-                        <li><a href="why-choose-us.html" class="page-scroll">Why choose us</a></li>
                         <li><a href="services.html" class="page-scroll">Services</a></li>
-                        <li><a href="gallery.html" class="page-scroll">Gallery</a></li>
+                        <li><a href="about-body-massage.html" class="page-scroll">body massage</a></li>
+                        <li><a href="about-thai-massage.html" class="page-scroll">thai massage</a></li>
                         <li><a href="outcall-hotel-massage.html" class="page-scroll">Outcall hotel massage</a></li>
+                        <li><a href="our-girls.html" class="page-scroll">Our girls</a></li>
+                        <li><a href="index.html" class="page-scroll">Contact</a></li>
                     </ul>
                 </div>
                 <!-- //.navbar-collapse -->
@@ -101,7 +104,12 @@
                 <div class="col-md-6 col-md-offset-1">
                     <h1 class="font-family-alt font-weight-700 letter-spacing-2 text-uppercase xs-title-small title-medium title-underline-thick-base-color" style="margin-top: 60px;">Best Full Body Massage in Pattaya</h1>
                     <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large"><i>
-					<strong>Best Massage in Pattaya at May’s Home Spa </strong>
+					<strong>
+                        
+                        <!-- Best Massage in Pattaya at May’s Home Spa -->
+                        Sensational Home Spa by May
+                    
+                    </strong>
 </i></p>
                     <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">Whether you need someone during weekend or to rejuvenate your mind and body in the most relaxing way, but at your apartment or room, May’s Home Spa ensures you will get the best massage in Pattaya at your home and in the professional way that you will love to get again.</p>
                     <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">If you are in Pattaya (on your holidays or trip – whether it is business trip or leisure one), your tour is counted as incomplete without indulge in the best spa and full body massage in Pattaya offered by professional and hot masseur. The soft touch of fingers and the flexible body of gorgeous girls will make you feel as if you are in the Seventh Heaven of pleasure and pleasure that you wish to get.</p>
