--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="google-site-verification" content="UAIVbs_A7-Gco3_QcSjcGoAT41xsmP72h7IbF_EyCd0" />
     <!-- Loading Bootstrap CSS -->
+    <link rel="shortcut icon" href="assets/images/logo/favicon.ico" type="image/x-icon">
     <link href="assets\css\bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Great+Vibes&display=swap&subset=latin-ext" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Gelasio&display=swap" rel="stylesheet">
@@ -90,11 +91,12 @@
                 <div id="navbar-niobe" class="navbar-collapse collapse col-md-9 pull-right">
                     <ul class="nav navbar-nav font-family-alt letter-spacing-1 text-small text-uppercase">
                         <li><a href="index.html" class="page-scroll">Home</a></li>
-                        <li><a href="what-we-offer.html" class="page-scroll">What we offer</a></li>
-                        <li><a href="why-choose-us.html" class="page-scroll">Why choose us</a></li>
                         <li><a href="services.html" class="page-scroll">Services</a></li>
-                        <li><a href="gallery.html" class="page-scroll">Gallery</a></li>
+                        <li><a href="about-body-massage.html" class="page-scroll">body massage</a></li>
+                        <li><a href="about-thai-massage.html" class="page-scroll">thai massage</a></li>
                         <li><a href="outcall-hotel-massage.html" class="page-scroll">Outcall hotel massage</a></li>
+                        <li><a href="our-girls.html" class="page-scroll">Our girls</a></li>
+                        <li><a href="#contact" class="page-scroll">Contact</a></li>
                     </ul>
                 </div>
                 <!-- //.navbar-collapse -->
