--- a/services.html
+++ b/services.html
@@ -5,13 +5,14 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 <head>
     <meta charset="utf-8">
-    <title>Sensational home spa - By may</title>
+    <title>Sensational Home Spa by May</title>
     <meta name="description" content="MAY’S HOME SPA">
     <meta name="keywords" content="MAY’S HOME SPA">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <!-- Loading Bootstrap CSS -->
+    <link rel="shortcut icon" href="assets/images/logo/favicon.ico" type="image/x-icon">
     <link href="assets\css\bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Great+Vibes&display=swap&subset=latin-ext" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Gelasio&display=swap" rel="stylesheet">
@@ -79,11 +80,12 @@
                 <div id="navbar-niobe" class="navbar-collapse collapse col-md-9 pull-right">
                     <ul class="nav navbar-nav font-family-alt letter-spacing-1 text-small text-uppercase">
                         <li><a href="index.html" class="page-scroll">Home</a></li>
-                        <li><a href="what-we-offer.html" class="page-scroll">What we offer</a></li>
-                        <li><a href="why-choose-us.html" class="page-scroll">Why choose us</a></li>
                         <li><a href="services.html" class="page-scroll">Services</a></li>
-                        <li><a href="gallery.html" class="page-scroll">Gallery</a></li>
+                        <li><a href="about-body-massage.html" class="page-scroll">body massage</a></li>
+                        <li><a href="about-thai-massage.html" class="page-scroll">thai massage</a></li>
                         <li><a href="outcall-hotel-massage.html" class="page-scroll">Outcall hotel massage</a></li>
+                        <li><a href="our-girls.html" class="page-scroll">Our girls</a></li>
+                        <li><a href="index.html" class="page-scroll">Contact</a></li>
                     </ul>
                 </div>
                 <!-- //.navbar-collapse -->
