--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 <head>
     <meta charset="utf-8">
-    <title>Sensational Home Spa by May | Best Outcall Massage in Pattaya City</title>
+    <title>Best Body Spa in Pattaya | Best Outcall Massage in Pattaya City</title>
     <meta name="description" content="Sensational Home Spa - By May offers best Best Home spa in Pattaya. Call us at +66 842705334 and book our therapists and get best best outcall body spa in Pattaya.">
     <meta name="keywords" content="Best body spa in pattaya, Home spa in pattaya, outcall massage in pattaya, outcall spa in pattaya">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
