--- a/about-body-massage.html
+++ b/about-body-massage.html
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 <head>
     <meta charset="utf-8">
-    <title>Best Full body massage in Pattaya | Best Home massage in Pattaya</title>
+    <title>Best Full Body Massage In Pattaya | Best Home Massage In Pattaya</title>
     <meta name="description" content="Book the best home massage experience in Pattaya of your own surroundings. Sensational Home Spa is a home massage service offering an erotic and private massage.">
     <meta name="keywords" content="Best body massage in pattaya, Full body massage in pattaya, Home massage, erotic massage pattaya">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
