--- a/gallery.html
+++ b/gallery.html
@@ -8,10 +8,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Outcall Hotel Massage | Sensational home spa - By may</title>
+    <title>Best and Authentic Thai Massage | Sensational home spa - By may</title>
     <meta name="description"
         content="Sensational Home Spa is the best Thai Massage spa specializing in best authentic Thai massage. Call us +66 842705334 and book our therapists now.">
-    <meta name="keywords" content="outcall hotel massagee, best outcall hotel massage massage">
+    <meta name="keywords" content="authentic thai massage, best thai massage">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
@@ -38,7 +38,8 @@
     <!-- Color Scheme CSS -->
     <link href="assets\css\niobe_color_pink.css" rel="stylesheet" type="text/css">
     <link href="assets\css\switch-style.css" rel="stylesheet" type="text/css">
-
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css"
+        media="screen">
 
     <style>
         .textcc {
@@ -59,13 +60,65 @@
         ul {
             list-style: inherit;
         }
+
+        #demo {
+            height: 100%;
+            position: relative;
+            overflow: hidden;
+        }
+
+
+        .green {
+            background-color: #6fb936;
+        }
+
+        .thumb {
+            margin-bottom: 30px;
+        }
+
+        .page-top {
+            margin-top: 85px;
+        }
+
+
+        img.zoom {
+            width: 100%;
+            height: 200px;
+            border-radius: 5px;
+            object-fit: cover;
+            -webkit-transition: all .3s ease-in-out;
+            -moz-transition: all .3s ease-in-out;
+            -o-transition: all .3s ease-in-out;
+            -ms-transition: all .3s ease-in-out;
+        }
+
+
+        .transition {
+            -webkit-transform: scale(1.2);
+            -moz-transform: scale(1.2);
+            -o-transform: scale(1.2);
+            transform: scale(1.2);
+        }
+
+        .modal-header {
+
+            border-bottom: none;
+        }
+
+        .modal-title {
+            color: #000;
+        }
+
+        .modal-footer {
+            display: none;
+        }
     </style>
 </head>
+
 
 <body id="page-top">
 
 
-    <!-- Style Switch Start -->
     <link id="switch-style" href="" rel="stylesheet" type="text/css">
 
 
@@ -103,7 +156,7 @@
                 <!-- //.navbar-header -->
 
                 <div id="navbar-niobe" class="navbar-collapse collapse col-md-9 pull-right">
-                    <ul class="nav navbar-nav font-family-alt letter-spacing-1 text-small text-uppercase text-small">
+                    <ul class="nav navbar-nav font-family-alt letter-spacing-1 text-small text-uppercase ">
                         <li><a href="index.html" class="page-scroll">Home</a></li>
                         <li><a href="services.html" class="page-scroll">Services</a></li>
                         <li><a href="about-body-massage.html" class="page-scroll">body massage</a></li>
@@ -123,54 +176,152 @@
     <!-- //Navigation End -->
 
     <!-- Section - Treatments Start -->
-    <section id="treatments" class="bg-cover bg-white no-padding-bottom">
-        <div class="container-fluid">
+    <section id="therapists" class="bg-gray-light-2">
+        <!-- Page Content -->
+
+
+        <div class="container page-top">
+
+
+
             <div class="row no-padding-rl no-padding-top padding-8">
-                <div class="col-md-6 col-md-offset-1">
-                    <h1 class="font-family-alt font-weight-700 letter-spacing-2 text-uppercase xs-title-small title-medium title-underline-thick-base-color"
-                        style='padding-top: 50px;'>OUTCALL/HOTEL MASSAGE</h1>
-
-                    <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">
-                        Sensational home spa is serving community from more than 5 years.our motto is to provide
-                        authentic services to customer at their doorstep.our trained and professional therapist makes
-                        complete relaxation to customers in their own room.our lady use with authentic , herbal and skin
-                        friendly massage oil for therapy.our services makes complete satisfaction to customers.
-                    </p>
-                    <h1 class="font-family-alt font-weight-700 letter-spacing-2 text-uppercase xs-title-small title-medium title-underline-thick-base-color"
-                        style='padding-top: 50px;'>BENEFITS OF OUTCALL MASSAGE SERVICES</h1>
-
-
-                    <ul class='margin-2 xs-text-large text-extra-large text-gray-dark-2 '>
-                        <li>Home comfort - outcall massage gives you home comfort at your home/hotel.no need to goo out.
-                        </li>
-                        <li>Familiar enviroment - during therapy you are in your familiar enviroment.therefore,u it
-                            makes you feel great and relaxing.</li>
-                        <li>Convinient for tourist- outcall/home massage ensures you you won't get misplaced searching
-                            for the massage expert's location.we provide you services on your door step.</li>
-                        <li>Happy sleep after massage - home spa provides you professional massage at your home/hotel
-                            which gives you happy sleep immidiAtely after massage.</li>
-                        <li>Privacy discreet- home/hotel massage gives you privacy and comfort at your own place.</li>
-                        <li>Girl of your choice - outcall massage provides you pictures of all therapist.among them you
-                            can choose therapist you want.</li>
-                    </ul>
-                    <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">We
-                        serve outcall massage services through out pattaya. Dont make yourself tired by going out.you
-                        can choose girl of your choice and enjoy the relaxing and soothing body massage at your
-                        home/hotel room.Dont make yourself tired by going out.book us now and get the perfect outcall
-                        massage at your doorstep.
-                    </p>
-                    <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">
-                        Thank you for choosing us.
-                        Sensational home spa by may
-                        Best outcall massage services in pattaya</p>
+                <div class="col-md-6 col-md-offset-3 text-center">
+                    <h3
+                        class="font-family-alt font-weight-700 letter-spacing-2 text-uppercase xs-title-small title-medium title-underline-thick-base-color">
+                        Gallery</h3>
+                    <!-- <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">
+                        <i>SHS is
+                            proud to present some of the industry trained therapists with a good work experience.</i>
+                    </p> -->
                 </div>
                 <!-- //.col-md-6 -->
             </div>
-            <!-- //.row -->
 
-            <!-- //.container-fluid -->
+            <div class="row">
+
+
+                <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                    <a href="/assets/images/gallery/1.jpeg" class="fancybox" rel="ligthbox">
+                        <img src="/assets/images/gallery/1.jpeg" class="zoom img-fluid " alt="">
+                    </a>
+                </div>
+
+                <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                    <a href="/assets/images/gallery/2.jpeg" class="fancybox" rel="ligthbox">
+                        <img src="/assets/images/gallery/2.jpeg" class="zoom img-fluid " alt="">
+                    </a>
+                </div>
+
+                <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                    <a href="/assets/images/gallery/3.jpeg" class="fancybox" rel="ligthbox">
+                        <img src="/assets/images/gallery/3.jpeg" class="zoom img-fluid " alt="">
+                    </a>
+                </div>
+
+                <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                    <a href="/assets/images/gallery/4.jpeg" class="fancybox" rel="ligthbox">
+                        <img src="/assets/images/gallery/4.jpeg" class="zoom img-fluid " alt="">
+                    </a>
+                </div>
+
+                <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                    <a href="/assets/images/gallery/5.jpeg" class="fancybox" rel="ligthbox">
+                        <img src="/assets/images/gallery/5.jpeg" class="zoom img-fluid " alt="">
+                    </a>
+                </div>
+
+                <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                    <a href="/assets/images/gallery/6.jpeg" class="fancybox" rel="ligthbox">
+                        <img src="/assets/images/gallery/6.jpeg" class="zoom img-fluid " alt="">
+                    </a>
+                </div>
+
+                <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                    <a href="/assets/images/gallery/7.jpeg" class="fancybox" rel="ligthbox">
+                        <img src="/assets/images/gallery/7.jpeg" class="zoom img-fluid " alt="">
+                    </a>
+                </div>
+
+                <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                    <a href="/assets/images/gallery/8.jpeg" class="fancybox" rel="ligthbox">
+                        <img src="/assets/images/gallery/8.jpeg" class="zoom img-fluid " alt="">
+                    </a>
+                </div>
+
+                <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                    <a href="/assets/images/gallery/9.jpeg" class="fancybox" rel="ligthbox">
+                        <img src="/assets/images/gallery/9.jpeg" class="zoom img-fluid " alt="">
+                    </a>
+                </div>
+
+                <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                    <a href="/assets/images/gallery/10.jpeg" class="fancybox" rel="ligthbox">
+                        <img src="/assets/images/gallery/10.jpeg" class="zoom img-fluid " alt="">
+                    </a>
+                </div>
+
+                <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                    <a href="/assets/images/gallery/11.jpeg" class="fancybox" rel="ligthbox">
+                        <img src="/assets/images/gallery/11.jpeg" class="zoom img-fluid " alt="">
+                    </a>
+                </div>
+
+                <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                    <a href="/assets/images/gallery/12.jpeg" class="fancybox" rel="ligthbox">
+                        <img src="/assets/images/gallery/12.jpeg" class="zoom img-fluid " alt="">
+                    </a>
+                </div>
+
+                <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                    <a href="/assets/images/gallery/13.jpeg" class="fancybox" rel="ligthbox">
+                        <img src="/assets/images/gallery/13.jpeg" class="zoom img-fluid " alt="">
+                    </a>
+                </div>
+
+                <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                    <a href="/assets/images/gallery/14.jpeg" class="fancybox" rel="ligthbox">
+                        <img src="/assets/images/gallery/14.jpeg" class="zoom img-fluid " alt="">
+                    </a>
+                </div>
+
+                <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                    <a href="/assets/images/gallery/15.jpeg" class="fancybox" rel="ligthbox">
+                        <img src="/assets/images/gallery/15.jpeg" class="zoom img-fluid " alt="">
+                    </a>
+                </div>
+
+                <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                    <a href="/assets/images/gallery/16.jpeg" class="fancybox" rel="ligthbox">
+                        <img src="/assets/images/gallery/16.jpeg" class="zoom img-fluid " alt="">
+                    </a>
+                </div>
+
+                <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                    <a href="/assets/images/gallery/17.jpeg" class="fancybox" rel="ligthbox">
+                        <img src="/assets/images/gallery/17.jpeg" class="zoom img-fluid " alt="">
+                    </a>
+                </div>
+
+                <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                    <a href="/assets/images/gallery/18.jpeg" class="fancybox" rel="ligthbox">
+                        <img src="/assets/images/gallery/18.jpeg" class="zoom img-fluid " alt="">
+                    </a>
+                </div>
+
+                <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                    <a href="/assets/images/gallery/19.jpeg" class="fancybox" rel="ligthbox">
+                        <img src="/assets/images/gallery/19.jpeg" class="zoom img-fluid " alt="">
+                    </a>
+                </div>
+
+
+            </div>
+
+
+
+
+        </div>
     </section>
-    <!-- //Section - Treatments End -->
 
 
     <!-- Footer Start -->
@@ -251,7 +402,24 @@
     <!-- Loading Theme JS -->
     <script src="assets\js\main.js"></script>
     <script src="assets\js\switch-style.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
 
 </body>
+<script>
+    $(document).ready(function () {
+        $(".fancybox").fancybox({
+            openEffect: "none",
+            closeEffect: "none"
+        });
+
+        $(".zoom").hover(function () {
+
+            $(this).addClass('transition');
+        }, function () {
+
+            $(this).removeClass('transition');
+        });
+    });
+</script>
 
 </html>
