--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
                         </div>
 
-    <h2 class="font-family-alt letter-spacing-1 margin-3 no-margin-bottom no-margin-rl text-gray-light  xs-text-large text-extra-large ">SENSATIONA OUTCALL MASSAGE PATTAYA</h2>
+    <h2 class="font-family-alt letter-spacing-1 margin-3 no-margin-bottom no-margin-rl text-gray-light  xs-text-large text-extra-large-3 aling=centre">SENSATIONAL OUTCALL MASSAGE PATTAYA</h2>
                         <div class='col-md-10'>
                             <h2
                                 class="font-family-alt letter-spacing-1 margin-3 no-margin-bottom no-margin-rl text-gray-light  xs-text-large text-extra-large ">
