--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                         </div>
 
      <h3
- class="font-family-alt font-weight-700 letter-spacing-2 text-uppercase xs-title-small title-medium title-underline-thick-base-color">SENSATIONAL OUTCALL MASSAGE PATTAYA</h3>
+ class="font-family-alt font-weight-700 letter-spacing-2 text-uppercase xs-title-small title-medium ">SENSATIONAL OUTCALL MASSAGE PATTAYA</h3>
                         <div class='col-md-10'>
                             <h2
                                 class="font-family-alt letter-spacing-1 margin-3 no-margin-bottom no-margin-rl text-gray-light  xs-text-large text-extra-large ">
