--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
 
                         </div>
-<div class="col-md-8 col-md-offset-2 text-center">
+<div class="text-center">
      <h2
  class="font-family-alt font-weight-700 letter-spacing-2 text-uppercase xs-title-small title-medium ">SENSATIONAL OUTCALL MASSAGE PATTAYA</h2></div>
                         <div class='col-md-10'>
