--- a/sitemap.html
+++ b/sitemap.html
@@ -114,18 +114,23 @@
 	<div id="top">
 		<nav>mayshomespa.com HTML Site Map</nav>
 		<h3>
-<span>Last updated: 2020, January 28<br />
-Total pages: 3</span>
+<span>Last updated: 2020, February 3<br />
+Total pages: 8</span>
 <a href="https://mayshomespa.com">mayshomespa.com Homepage</a>
 </h3></div>
 	<div id="cont">
 		<ul class="level-0">
 
-            <li class="lhead">/  <span class="lcount">3 pages</span></li>
+            <li class="lhead">/  <span class="lcount">8 pages</span></li>
             
-<li class="lpage"><a href="https://mayshomespa.com/" title="Best Home Body Spa In Pattaya | Best Outcall Massage In Pattaya">Best Home Body Spa In Pattaya | Best Outcall Massage In Pattaya</a></li>
-<li class="lpage"><a href="https://mayshomespa.com/services.html" title="Sensational home spa - By may">Sensational home spa - By may</a></li>
-<li class="lpage last-page"><a href="https://mayshomespa.com/index.html" title="Best Home Body Spa In Pattaya | Best Outcall Massage In Pattaya">Best Home Body Spa In Pattaya | Best Outcall Massage In Pattaya</a></li>
+<li class="lpage"><a href="https://mayshomespa.com/" title="Best Body Spa in Pattaya | Best Outcall Massage in Pattaya City">Best Body Spa in Pattaya | Best Outcall Massage in Pattaya City</a></li>
+<li class="lpage"><a href="https://mayshomespa.com/index.html" title="Best Body Spa in Pattaya | Best Outcall Massage in Pattaya City">Best Body Spa in Pattaya | Best Outcall Massage in Pattaya City</a></li>
+<li class="lpage"><a href="https://mayshomespa.com/services.html" title="Sensational Home Spa by May">Sensational Home Spa by May</a></li>
+<li class="lpage"><a href="https://mayshomespa.com/about-body-massage.html" title="Best Full Body Massage In Pattaya | Best Home Massage In Pattaya">Best Full Body Massage In Pattaya | Best Home Massage In Pattaya</a></li>
+<li class="lpage"><a href="https://mayshomespa.com/about-thai-massage.html" title="Best and Authentic Thai Massage | Sensational home spa - By may">Best and Authentic Thai Massage | Sensational home spa - By may</a></li>
+<li class="lpage"><a href="https://mayshomespa.com/outcall-hotel-massage.html" title="Outcall Hotel Massage | Sensational home spa - By may">Outcall Hotel Massage | Sensational home spa - By may</a></li>
+<li class="lpage"><a href="https://mayshomespa.com/our-girls.html" title="Best and Authentic Thai Massage | Sensational home spa - By may">Best and Authentic Thai Massage | Sensational home spa - By may</a></li>
+<li class="lpage last-page"><a href="https://mayshomespa.com/gallery.html" title="Best and Authentic Thai Massage | Sensational home spa - By may">Best and Authentic Thai Massage | Sensational home spa - By may</a></li>
 </ul>
 		<!--
 Please note:
