--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Best Body Spa in Pattaya | Best Outcall Massage in Pattaya City</title>
+    <title>Best Outcall Body Massage in Pattaya City & Chonburi - Sensational Home Spa</title>
     <meta name="description"
-        content="Sensational Home Spa - By May offers best Best Home spa in Pattaya. Call us at +66 842705334 and book our therapists and get best best outcall body spa in Pattaya.">
+        content="Sensational Home Spa - By May offers best Best outcall body massage in Pattaya& Chonburi. Call us at +66 842705334 and book our therapists and get best best outcall body spa in Pattaya.">
     <meta name="keywords"
-        content="Best body spa in pattaya, Home spa in pattaya, outcall massage in pattaya, outcall spa in pattaya">
+        content="Best body massage in pattaya, Best outcall body massage in chonburi, Best outcall spa in pattaya">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="google-site-verification" content="UAIVbs_A7-Gco3_QcSjcGoAT41xsmP72h7IbF_EyCd0" />
