--- a/our-girls.html
+++ b/our-girls.html
@@ -8,10 +8,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Best and Authentic Thai Massage | Sensational home spa - By may</title>
+    <title>Beautiful Girls Massage in Pattaya | Sexy & Hot Massages in Pattaya</title>
     <meta name="description"
-        content="Sensational Home Spa is the best Thai Massage spa specializing in best authentic Thai massage. Call us +66 842705334 and book our therapists now.">
-    <meta name="keywords" content="authentic thai massage, best thai massage">
+        content="Call us at +66 842705334 and Beautiful girls massage in pattaya now. We have the list of Hot and sexy lady who provide you Best Sexual body to body massages in pattaya">
+    <meta name="keywords" content="Best girls outcall massage, Beautifull girls massage in pattaya, Sexy lady massages in pattaya, Hot lady massage in pattaya">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
