--- a/about-thai-massage.html
+++ b/about-thai-massage.html
@@ -8,10 +8,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Best and Authentic Thai Massage | Sensational home spa - By may</title>
+    <title>Best Deep Tissue Massages | Aroma Oil & Painkiller Massage in Pattaya</title>
     <meta name="description"
-        content="Sensational Home Spa is the best Thai Massage spa specializing in best authentic Thai massage. Call us +66 842705334 and book our therapists now.">
-    <meta name="keywords" content="authentic thai massage, best thai massage">
+        content="">
+    <meta name="keywords" content="Best aroma oil massages in pattaya, painkiller massages, deep tissue massages">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
