--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
 
                     <a class="navbar-brand page-scroll font-family-alt letter-spacing-1 text-extra-large text-uppercase"
                         href="#page-top">
-                        <img class="logo-navbar-dark img-fluid" src="assets/images/logo/logo-may-spa.png" alt="logo"
+                        <img class="logo-navbar-dark img-fluid" src="assets/images/logo/logo-may-spa.png" alt="mays home spa logo"
                             style='height: 60px'>
-                        <img class="logo-navbar-white img-fluid" src="assets/images/logo/logo-may-spa.png" alt="logo"
+                        <img class="logo-navbar-white img-fluid" src="assets/images/logo/logo-may-spa.png" alt="mays home spa logo"
                             style='height: 60px'>
                     </a>
                 </div>
@@ -140,7 +140,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-11">
-                            <img src='assets/images/03.png' class="img-fluid" alt='logo'
+                            <img src='assets/images/03.png' class="img-fluid" alt='Best body massage in pattaya'
                                 style='width: 40%;margin-top: 80px;' />
 
                             <h2 class="letter-spacing-5 text-white xs-title-extra-large sm-title-extra-large-3 title-extra-large-5"
@@ -183,7 +183,7 @@
     <!-- Intro Start -->
     <div id="intro" class="bg-white-3 sm-no-padding-rl no-padding-rl sm-padding-17 padding-11 position-relative">
         <!-- Intro Image -->
-        <img src="assets\images\intro.png" alt="">
+        <img src="assets\images\intro.png" alt="Best outcall massage in pattaya">
 
         <div class="container">
             <div class="row">
@@ -609,7 +609,7 @@
                             <span
                                 class="opacity-7 position-absolute position-top position-left triangle-top-left triangle-base-color"></span>
 
-                            <img src="assets/images/Yukii.png" class='img-fluid' alt="yukii" style="width: 100%">
+                            <img src="assets/images/Yukii.png" class='img-fluid' alt="Best outcall body massage in chonburi" style="width: 100%">
                         </div>
                         <!-- //.position-relative -->
 
@@ -632,7 +632,7 @@
                             <span
                                 class="opacity-7 position-absolute position-top position-left triangle-top-left triangle-base-color"></span>
 
-                            <img src="assets/images/Mew.png" class='img-fluid' alt="mew" style="width: 100%">
+                            <img src="assets/images/Mew.png" class='img-fluid' alt="Best massage in chonburi" style="width: 100%">
                         </div>
                         <!-- //.position-relative -->
 
@@ -655,7 +655,7 @@
                             <span
                                 class="opacity-7 position-absolute position-top position-left triangle-top-left "></span>
 
-                            <img src="assets/images/Naam.png" class='img-fluid' alt="a m" style="width: 100%">
+                            <img src="assets/images/Naam.png" class='img-fluid' alt="Best outcall spa in pattaya" style="width: 100%">
                         </div>
                         <!-- //.position-relative -->
 
