--- a/about-thai-massage.html
+++ b/about-thai-massage.html
@@ -94,9 +94,9 @@
 
                     <a class="navbar-brand page-scroll font-family-alt letter-spacing-1 text-extra-large text-uppercase"
                         href="http://mayshomespa.com/">
-                        <img class="logo-navbar-dark img-fluid" src="assets/images/logo/logo-may-spa.png" alt="logo"
+                        <img class="logo-navbar-dark img-fluid" src="assets/images/logo/logo-may-spa.png" alt="Best aroma oil massages in pattaya"
                             style='height: 55px'>
-                        <img class="logo-navbar-white img-fluid" src="assets/images/logo/logo-may-spa.png" alt="logo"
+                        <img class="logo-navbar-white img-fluid" src="assets/images/logo/logo-may-spa.png" alt="Best painkiller massages in pattaya"
                             style='height: 60px'>
                     </a>
                 </div>
@@ -148,9 +148,9 @@
                         in combination include:</p>
                     <ul class='margin-2 xs-text-large text-extra-large text-gray-dark-2 '>
                         <li>Traditional Thai Spa (Dry Therapy)</li>
-                        <li>Traditional Oil Massage </li>
-                        <li>Aroma Oil Therapy </li>
-                        <li>Deep Tissue Therapy with Aroma </li>
+                        <li>Best Painkiller Massages in Pattaya</li>
+                        <li>Best Aroma Oil Massages in Pattaya</li>
+                        <li>Best Deep Tissue Massage with Aroma </li>
                         <li>Couple Massage (four hands)</li>
                     </ul>
                     <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">In
@@ -191,7 +191,7 @@
 
                 <div class="col-sm-4">
                     <div class="text-right xs-text-center">
-                        <img src="assets/images/logo/log-may-spa-black.png" class='img-fluid' alt="spa_logo"
+                        <img src="assets/images/logo/log-may-spa-black.png" class='img-fluid' alt="Best deeptissue massages in pattaya"
                             style="width: 50px;">
                     </div>
                     <!-- //.footer-logo -->
