--- a/our-girls.html
+++ b/our-girls.html
@@ -94,7 +94,7 @@
 
                     <a class="navbar-brand page-scroll font-family-alt letter-spacing-1 text-extra-large text-uppercase"
                         href="http://mayshomespa.com/">
-                        <img class="logo-navbar-dark img-fluid" src="assets/images/logo/logo-may-spa.png" alt="logo"
+                        <img class="logo-navbar-dark img-fluid" src="assets/images/logo/logo-may-spa.png" alt="Best girls outcall massage"
                             style='height: 55px'>
                         <img class="logo-navbar-white img-fluid" src="assets/images/logo/logo-may-spa.png" alt="logo"
                             style='height: 60px'>
@@ -150,7 +150,7 @@
                             <span
                                 class="opacity-7 position-absolute position-top position-left triangle-top-left triangle-base-color"></span>
 
-                            <img src="assets/images/Yukii.png" class='img-fluid' alt="yukii" style="width: 100%">
+                            <img src="assets/images/Yukii.png" class='img-fluid' alt="Beautiful girls massage in pattaya" style="width: 100%">
                         </div>
                         <!-- //.position-relative -->
 
@@ -173,7 +173,7 @@
                             <span
                                 class="opacity-7 position-absolute position-top position-left triangle-top-left triangle-base-color"></span>
 
-                            <img src="assets/images/Mew.png" class='img-fluid' alt="mew" style="width: 100%">
+                            <img src="assets/images/Mew.png" class='img-fluid' alt="Body to body massages in pattaya" style="width: 100%">
                         </div>
                         <!-- //.position-relative -->
 
@@ -196,7 +196,7 @@
                             <span
                                 class="opacity-7 position-absolute position-top position-left triangle-top-left "></span>
 
-                            <img src="assets/images/Naam.png" class='img-fluid' alt="a m" style="width: 100%">
+                            <img src="assets/images/Naam.png" class='img-fluid' alt="Best Sexual body massages in pattaya" style="width: 100%">
                         </div>
                         <!-- //.position-relative -->
 
@@ -221,7 +221,7 @@
                             <span
                                 class="opacity-7 position-absolute position-top position-left triangle-top-left "></span>
 
-                            <img src="assets/images/Saa.png" class='img-fluid' alt="saa" style="width: 100%">
+                            <img src="assets/images/Saa.png" class='img-fluid' alt="Sexy lady massages in pattaya" style="width: 100%">
                         </div>
                         <!-- //.position-relative -->
 
@@ -244,7 +244,7 @@
                             <span
                                 class="opacity-7 position-absolute position-top position-left triangle-top-left"></span>
 
-                            <img src="assets/images/far.png" class='img-fluid' alt="far" style="width: 100%">
+                            <img src="assets/images/far.png" class='img-fluid' alt="Hot lady massage in pattaya" style="width: 100%">
                         </div>
                         <!-- //.position-relative -->
 
