--- a/outcall-hotel-massage.html
+++ b/outcall-hotel-massage.html
@@ -94,9 +94,9 @@
 
                     <a class="navbar-brand page-scroll font-family-alt letter-spacing-1 text-extra-large text-uppercase"
                         href="http://mayshomespa.com/">
-                        <img class="logo-navbar-dark img-fluid" src="assets/images/logo/logo-may-spa.png" alt="logo"
+                        <img class="logo-navbar-dark img-fluid" src="assets/images/logo/logo-may-spa.png" alt="Best hotel room massages in pattaya"
                             style='height: 55px'>
-                        <img class="logo-navbar-white img-fluid" src="assets/images/logo/logo-may-spa.png" alt="logo"
+                        <img class="logo-navbar-white img-fluid" src="assets/images/logo/logo-may-spa.png" alt="Best Erotic body massages in pattaya"
                             style='height: 60px'>
                     </a>
                 </div>
@@ -193,7 +193,7 @@
 
                 <div class="col-sm-4">
                     <div class="text-right xs-text-center">
-                        <img src="assets/images/logo/log-may-spa-black.png" class='img-fluid' alt="spa_logo"
+                        <img src="assets/images/logo/log-may-spa-black.png" class='img-fluid' alt="Hotel room massage in pattaya"
                             style="width: 50px;">
                     </div>
                     <!-- //.footer-logo -->
