--- a/about-body-massage.html
+++ b/about-body-massage.html
@@ -12,7 +12,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <!-- Loading Bootstrap CSS -->
-    <link rel="shortcut icon" href="assets/images/logo/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/images/logo/favicon-96x96.png" type="image/png">
+
 
     <link href="assets\css\bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Great+Vibes&display=swap&subset=latin-ext" rel="stylesheet">
