added message in bolds

--- a/index.html
+++ b/index.html
@@ -153,6 +153,11 @@
                         </div>
 
                         <div class='col-md-10'>
+                            <h1
+                                class="font-family-alt letter-spacing-1 margin-3 no-margin-bottom no-margin-rl text-gray-light  xs-text-large text-extra-large ">
+                                <b> BEST OUTCALL MASSAGE IN PATTAYA</b>
+                            </h1>
+
                             <h2
                                 class="font-family-alt letter-spacing-1 margin-3 no-margin-bottom no-margin-rl text-gray-light  xs-text-large text-extra-large ">
                                 GET PROFESSIONAL AND BEST BODY SPA/MASSAGE IN JUST ONE CLICK BY SITTING AT HOME/HOTEL AT
@@ -160,6 +165,11 @@
                                 PROFESSIONAL THERAPIST.
 
                             </h2>
+
+                            <h1
+                                class="font-family-alt letter-spacing-1 margin-3 no-margin-bottom no-margin-rl text-gray-light  xs-text-large text-extra-large ">
+                                <b> BEST OUTCALL MASSAGE SERVICES</b>
+                            </h1>
 
 
                             <a href="/gallery.html"
