--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                         <div class='col-md-10'>
                             <h1
                                 class="font-family-alt letter-spacing-1 margin-3 no-margin-bottom no-margin-rl text-gray-light  xs-text-large text-extra-large ">
-                                <b> BEST OUTCALL MASSAGE IN PA</b>
+                                <b> BEST OUTCALL MASSAGE IN PATTAYA</b>
                             </h1>
 
                             <h2
