--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Best Outcall Body Massage in Pattaya City & Chonburi - Sensational Home Spa by May</title>
+    <title>Outcall Massage Pattaya | Best Home Massage & Spa Services</title>
     <meta name="description"
        content="Sensational Home Spa - By May offers best Best outcall body massage in Pattaya& Chonburi. Call us at +66 842705334 and book our therapists and get best best outcall body spa in Pattaya.">
     <meta name="keywords"
