--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Outcall Massage Pattaya | Best Home Massage & Spa Servicesvvv</title>
-    <meta name="description"
-       content="Sensational Home Spa - By May offers best Best outcall body massage in Pattaya& Chonburi. Call us at +66 842705334 and book our therapists and get best best outcall body spa in Pattaya.">
-    <meta name="keywords"
-        content="Best body massage in pattaya, Best outcall body massage in chonburi, Best outcall spa in pattaya">
+    <title>Outcall Massage Pattaya | Best Home Massage & Spa Services</title>
+    <meta name="description"content="Outcall Massage Pattaya provides best outcall massage services, Mobile massage services, Home massage services and spa in Pattaya. Book our therapists today.">
+    <meta name="keywords"content="outcall massage in pattaya, best outcall massage in pattaya, home massage and spa pattaya, best massage services in pattaya, outcall massage pattaya, home massage services pattaya, mobile massage services pattaya">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="google-site-verification" content="UAIVbs_A7-Gco3_QcSjcGoAT41xsmP72h7IbF_EyCd0" />
