--- a/index.html
+++ b/index.html
@@ -150,10 +150,10 @@
                         </div>
 
                         <div class='col-md-10'>
-                            <h1
+                            <h2
                                 class="font-family-alt letter-spacing-1 margin-3 no-margin-bottom no-margin-rl text-gray-light  xs-text-large text-extra-large ">
                                 <b> BEST OUTCALL MASSAGE IN PATTAYA</b>
-                            </h1>
+                            </h2>
 
                             <h2
                                 class="font-family-alt letter-spacing-1 margin-3 no-margin-bottom no-margin-rl text-gray-light  xs-text-large text-extra-large ">
@@ -163,10 +163,10 @@
 
                             </h2>
 
-                            <h1
+                            <h2
                                 class="font-family-alt letter-spacing-1 margin-3 no-margin-bottom no-margin-rl text-gray-light  xs-text-large text-extra-large ">
                                 <b> BEST OUTCALL MASSAGE SERVICES</b>
-                            </h1>
+                            </h2>
 
 
                             <a href="/gallery.html"
@@ -195,6 +195,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2 text-center">
+                    <h1>Outcall Massage Pattaya</h1>
                     <p
                         class="font-family-alt no-margin position-relative xs-text-large text-extra-large text-gray-dark-2">
                         May’s Home Spa has been serving the community and beyond for over 10 years. Our services are
