--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2 text-center">
-                    <h1>Outcall Massage Pattayav</h1>
+                    <h1>Outcall Massage Pattaya</h1>
                     <br>
                     <p
                         class="font-family-alt no-margin position-relative xs-text-large text-extra-large text-gray-dark-2">
