--- a/hotel-room-massage-service-pattaya.html
+++ b/hotel-room-massage-service-pattaya.html
@@ -8,10 +8,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Best Hotel Room Massages in Pattaya | Sensational home spa - By may</title>
+    <title>Hotel Room Massage in Pattaya | Room Service Massage in Pattaya</title>
     <meta name="description"
-        content="Sensational Home Spa offers best hotel room Massage specializing in best erotic body massage in Pattaya. Call us +66 842705334 and book our therapists now.">
-    <meta name="keywords" content="Hotel massages in pattaya, Hotel room massage in pattaya, Best Erotic body massages in pattaya">
+        content="Sensational Home Spa offers best hotel room Massage in Pattaya, specializing in best room service massage in Pattaya. Call us +66 842705334 and book our therapists now.">
+    <meta name="keywords" content="hotel massages in pattaya, hotel room massage in pattaya, room service massage in pattaya">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
