--- a/hotel-room-massage-service-pattaya.html
+++ b/hotel-room-massage-service-pattaya.html
@@ -106,9 +106,9 @@
                     <ul class="nav navbar-nav font-family-alt letter-spacing-1 text-small text-uppercase text-small">
                         <li><a href="index.html" class="page-scroll">Home</a></li>
                         <li><a href="services.html" class="page-scroll">Services</a></li>
-                        <li><a href="about-body-massage.html" class="page-scroll">body massage</a></li>
-                        <li><a href="about-thai-massage.html" class="page-scroll">thai massage</a></li>
-                        <li><a href="outcall-hotel-massage.html" class="page-scroll">Outcall hotel massage</a></li>
+                        <li><a href="body-massage-pattaya.html" class="page-scroll">body massage</a></li>
+                        <li><a href="thai-massage-pattaya.html" class="page-scroll">thai massage</a></li>
+                        <li><a href="hotel-room-massage-service-pattaya.html" class="page-scroll">Outcall hotel massage</a></li>
                         <li><a href="our-girls.html" class="page-scroll">Our girls</a></li>
                         <li><a href="index.html" class="page-scroll">Contact</a></li>
 
