--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Outcall Massage Pattaya | Best Home Massage & Spa Services</title>
+    <title>Outcall Massage Pattaya | 24x7 Expert Outcall Massage Services Pattaya</title>
     <meta name="description"content="Outcall Massage Pattaya provides best outcall massage services, Mobile massage services, Home massage services and spa in Pattaya. Book our therapists today.">
     <meta name="keywords"content="outcall massage in pattaya, best outcall massage in pattaya, home massage and spa pattaya, best massage services in pattaya, outcall massage pattaya, home massage services pattaya, mobile massage services pattaya">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
