--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2 text-center">
-                    <h1 title-underline-thick-base-color>Outcall Massage Pattaya</h1>
+                    <h1 class="title-underline-thick-base-color">Outcall Massage Pattaya</h1>
                     <br>
                     <p
                         class="font-family-alt no-margin position-relative xs-text-large text-extra-large text-gray-dark-2">
