--- a/our-girls.html
+++ b/our-girls.html
@@ -132,11 +132,8 @@
                         class="font-family-alt font-weight-700 letter-spacing-2 text-uppercase xs-title-small title-medium title-underline-thick-base-color">
                         Our Girls</h3>
                     <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">
-                        <i>Sensational home spa provides you facility to choose girls of your own choice.here are some
-                            of our beautifull and sexy
-                            therapist who serves you at your own place with complete privacy and provides you ultimate
-                            relaxation..book now for
-                            world class experiences..</i></p>
+                        <i>Outcall massages pattaya provides you wide range of beautifull girls at your doorstep.we offers you to select beautifull girl/lady of your own choice.lady will reach your destination in about 15-30 minutes according to distance and traffic.
+Our beautifull and experienced therapist provides you complete satisfaction and makes your time more special.Their magical fingers revitalize your mind body and soul.</i></p>
                 </div>
                 <!-- //.col-md-6 -->
             </div>
